# discount-bot

./: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
migration/: env.py
migration/versions/: 187ecab10567_initial_revision.py  8a682e923a68_initial_revision.py  d8dfaf70fb4c_username_may_contains_null.py
scripts/: entrypoint.sh
src/: config.py  utils.py
src/api/: service.py
src/api/schemas/: order.py  orders.py  request.py  response.py
src/app/: bot.py  logger.py  run.py  utils.py
src/app/commands/: menu.py
src/app/keyboards/: status.py
src/app/routers/: auth.py  order_status.py  start.py  status.py
src/app/schemas/: order.py  user.py
src/app/states/: contact.py
src/broadcast/: broadcast.py  logger.py  process.py  send.py
src/broadcast/models/: order.py
src/database/: logger.py
src/database/data/: users.db
src/database/models/: user.py
src/database/services/: db.py  service.py
src/discount_bot/: base.py  constants.py  dependencies.py  exceptions.py  rest.py  schemas.py  settings.py  use_cases.py  utils.py
src/discount_bot/bot/: commads.py  dispatcher.py  handlers.py  keyboards.py  templates.py  utils.py
src/discount_bot/broker/: app.py  (+1 more)
src/formatter/: message.py  statuses.py  template.py
src/http/: api.py
src/message/: order_status.py
src/order_service/: api.py
src/orders_api/: service.py
src/rabbit_mq/: __init__.py  base.py  consumer.py  exchange.py
src/redis/: connection.py  manage.py  service.py
src/rmq/: consumer.py
src/service/: api.py  logger.py
(+9 files in other folders)
