[tool.poetry]
name = "orderstatusapp"
version = "0.1.0"
description = ""
authors = ["AndreyKosov <andrey.kosov.05@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.5"}
aiogram = "^3.15.0"
sqlalchemy = "^2.0.36"
aiohttp = "3.9.0"
redis = "^5.2.0"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
aiosqlite = "^0.20.0"
redis-om = "^0.3.3"
pika = "^1.3.2"
aio-pika = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
